@@ -1679,8 +1679,10 @@
             <executions>
               <execution>
                 <id>attach-javadocs</id>
+                <phase>package</phase>
                 <goals>
                   <goal>jar</goal>
+                  <goal>test-jar</goal>
                 </goals>
               </execution>
             </executions>
@@ -1693,9 +1695,6 @@
               <dependencySourceExcludes>
                 <dependencySourceExclude>com.hack23.cia:testfoundation</dependencySourceExclude>
               </dependencySourceExcludes>
-              <additionalJOptions>
-                <additionalJOption>--add-modules=java.se</additionalJOption>
-              </additionalJOptions>
               <!--               <doclet>org.jboss.apiviz.APIviz</doclet>
               <docletArtifacts>
                 <docletArtifact>
@@ -1704,7 +1703,14 @@
                   <version>1.3.4</version>
                 </docletArtifact>
               </docletArtifacts>
- -->
+
+              <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+              <docletArtifact>
+                <groupId>nl.talsmasoftware</groupId>
+                <artifactId>umldoclet</artifactId>
+                <version>2.0.2</version>
+              </docletArtifact>
+              -->
               <useStandardDocletOptions>true</useStandardDocletOptions>
               <charset>UTF-8</charset>
               <encoding>UTF-8</encoding>
@@ -1712,8 +1718,7 @@
               <release>${jdk.src.version}</release>
               <sourcepath>${basedir}/src/main/java</sourcepath>
               <docencoding>UTF-8</docencoding>
-              <additionalOptions>-html5</additionalOptions>
-              <javadocVersion>${jdk.src.version}</javadocVersion>
+              <additionalOptions>-html5</additionalOptions>              
             </configuration>
           </plugin>
           <plugin>
@@ -1853,7 +1858,14 @@
                 <artifactId>apiviz</artifactId>
                 <version>1.3.4</version>
               </docletArtifact>
- -->
+
+              <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+              <docletArtifact>
+                <groupId>nl.talsmasoftware</groupId>
+                <artifactId>umldoclet</artifactId>
+                <version>2.0.2</version>
+              </docletArtifact>
+               -->
               <useStandardDocletOptions>true</useStandardDocletOptions>
               <charset>UTF-8</charset>
               <encoding>UTF-8</encoding>
